--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ Django==5.1.4
 django-widget-tweaks==1.5.0
 fonttools==4.54.1
 frozenlist==1.5.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
